--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,23 @@
         <javafx.version>21</javafx.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>central</id>
+            <name>Maven Central</name>
+            <url>https://repo1.maven.org/maven2</url>
+        </repository>
+        <repository>
+            <id>jcenter</id>
+            <name>JCenter</name>
+            <url>https://jcenter.bintray.com</url>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <!-- JavaFX -->
         <dependency>
@@ -72,24 +89,83 @@
             <version>2.0.1</version>
         </dependency>
 
+        <!-- ControlsFX -->
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.2.1</version>
+        </dependency>
+
         <!-- Icons: Ikonli (Core + Material Design Pack) -->
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-javafx</artifactId>
             <version>12.3.1</version>
         </dependency>
+        <!--
+        <dependency>
+            <groupId>org.kordamp.ikonli</groupId>
+            <artifactId>ikonli-lucide-pack</artifactId>
+            <version>12.3.1</version>
+        </dependency>
+        -->
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-material2-pack</artifactId>
             <version>12.3.1</version>
-        </dependency>
+        </dependency> 
 
         <!-- Animations: AnimateFX -->
         <!--
         <dependency>
             <groupId>io.github.typhon0</groupId>
             <artifactId>animatefx</artifactId>
-            <version>1.2.4</version>
+            <version>1.2.3</version>
+        </dependency>
+        -->
+
+        <!-- Medusa (Gauges) -->
+        <!--
+        <dependency>
+            <groupId>eu.hansolo</groupId>
+            <artifactId>medusa</artifactId>
+            <version>16.0.0</version>
+        </dependency>
+        -->
+
+        <!-- TilesFX (KPIs) -->
+        <dependency>
+            <groupId>eu.hansolo</groupId>
+            <artifactId>tilesfx</artifactId>
+            <version>17.1.17</version>
+             <exclusions>
+               <exclusion>
+                  <groupId>org.openjfx</groupId>
+                  <artifactId>*</artifactId>
+               </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!-- RichTextFX -->
+        <dependency>
+            <groupId>org.fxmisc.richtext</groupId>
+            <artifactId>richtextfx</artifactId>
+            <version>0.11.2</version>
+        </dependency>
+
+        <!-- TestFX -->
+        <!--
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-core</artifactId>
+            <version>4.0.18</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-junit5</artifactId>
+            <version>4.0.18</version>
+            <scope>test</scope>
         </dependency>
         -->
 
